corrected changes on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,9 @@ section {
   justify-content: center!important;
 }
 
-.section.is-primary {
+.is-primary {
   background-color: #23ff00;
+  padding: 10rem 2.5rem;
 }
 
 .is-half {
@@ -113,8 +114,7 @@ section {
 /* bottom div */
 
 .bottom-div{
-  background-color: #23ff00;
-  /* padding: 2.5rem; */
+  padding-bottom: 1!important;
 }
 
 /*  */
@@ -171,8 +171,7 @@ section {
   }
 
   .bottom-div {
-    padding: 2.5rem;
-    margin-bottom: 1.8rem;
+    /* margin-bottom: 1.8rem; */
   }
 
   .social-media-box{
